# lenga

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  shell.nix
language/: Cargo.toml  language.rs  lib.rs  node.rs
language/language/: c.rs
language/language/c/: c_type.rs  language_object.rs
language/language/c/language_object/: field_inspect_test.rs  special_object.rs  statement_object.rs
language/language/c/language_object/declaration_object/: function_declaration.rs  function_definition.rs
language/language/c/language_object/declaration_object/function_declaration/: function_parameter.rs
language/language/c/language_object/expression_object/: binary_expression.rs  number_literal.rs  string_literal.rs
language/language/c/language_object/special_object/: comment.rs  source_file.rs  unknown.rs
language/language/c/language_object/statement_object/: compound_statement.rs  return_statement.rs
language/language/c/parsers/: context.rs  nodes.rs
language/language/c/writers/: node_writer.rs  text_writer.rs  writer_error.rs
language/language/c/writers/node_writer/: node_type.rs
language/src/: language.rs  node.rs
language/src/language/: c.rs
language/src/language/c/: c_type.rs  language_object.rs  object_types.rs  parsers.rs  writers.rs
language/src/language/c/language_object/: assignment_expression.rs  binary_expression.rs  call_expression.rs  comment.rs  compound_statement.rs  declaration.rs  declaration_object.rs  else_clause.rs  expression_object.rs  expression_statement.rs  field_inspect_test.rs  function_declaration.rs  function_definition.rs  function_parameter.rs  if_statement.rs  number_literal.rs  preproc_include.rs  reference.rs  return_statement.rs  source_file.rs  statement_object.rs  string_literal.rs
language/src/language/c/language_object/declaration_object/: declaration.rs  function_declaration.rs  function_definition.rs  preproc_include.rs
language/src/language/c/language_object/expression_object/: assignment_expression.rs  binary_expression.rs  call_expression.rs  number_literal.rs  reference.rs  string_literal.rs
language/src/language/c/language_object/special_object/: comment.rs  source_file.rs  unknown.rs
language/src/language/c/language_object/statement_object/: compound_statement.rs  if_statement.rs  return_statement.rs
language/src/language/c/object_types/: c_type.rs
language/src/language/c/parsers/: context.rs  nodes.rs  text.rs
language/src/language/c/writers/: node_writer.rs  text_writer.rs  writer_error.rs
language/src/language/c/writers/node_writer/: node_type.rs
lenga-server/: Cargo.toml  build.rs
lenga-server/proto/c/: lenga.proto  objects.proto
lenga-server/rpc/: README.md
lenga-server/src/: lenga_service.rs  main.rs
lenga-server/src/lenga_service/: clenga.rs
lenga-server/src/lenga_service/clenga/: node_parser.rs  node_searcher.rs  nodes_replacer.rs  proto_parser.rs
lenga_field_inspect_derive/: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
lenga_field_inspect_derive/src/: lib.rs
(+23 files in other folders)
