[package]
name = "lenga"
version = "1.0.0"
authors = ["Gerónimo Bejamín Palavecino <gbpalavecino01@gmail.com>", "Patricio Tourne Passarino <contact@patricios.space>"]
edition = "2024"
description = "Tools for the Lenga develop paradigm"
readme = "README.md"
repository = "https://github.com/lengalabs/lenga"
license = "MIT"
build = "lenga-server/build.rs"
exclude = ["./lenga_field_inspect_derive"]

[lib]
name = "lenga"
path = "language/lib.rs"
doctest = false

[[bin]]
name = "lenga-server"
path = "lenga-server/src/main.rs"
doctest = false

[[bin]]
name = "merge"
path = "merge/main.rs"
doctest = false

[[bin]]
name = "transpile"
path = "transpile/main.rs"
doctest = false

[dependencies]
lenga_field_inspect_derive = { path = "./lenga_field_inspect_derive", version= "1.0.0" }
tree-sitter = "0.25.8"
tree-sitter-c = "0.24.1"
tonic = "0.11"
tokio = { version = "1", features = ["full"] }
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde-reflection = "0.3"
anyhow = "1"
bincode = "1.3"
bimap = "0.6.3"
sha2 = "0.10"

[dependencies.uuid]
version = "1.17.0"
features = ["v4", "serde"]

[workspace]
resolver = "3"
members = ["lenga_field_inspect_derive"]

[build-dependencies]
tonic-build = "0.11"