[package]
name = "language"
version = "0.1.0"
edition = "2024"

[dependencies]
# Parsing C
tree-sitter = "0.25.8"
tree-sitter-c = "0.24.1"
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bimap = "0.6.3"
sha2 = "0.10"
# Derive macros
field_inspect_derive = { path = "../field_inspect_derive" }

[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = ["v4", "serde"]

[build-dependencies]
cc = "*"
