[package]
name = "lenga-server"
version = "0.1.0"
edition = "2024"
build = "build.rs"


[dependencies]
language = { path = "../language" }
field_inspect_derive = { path = "../field_inspect_derive" }
tonic = "0.11"
tokio = { version = "1", features = ["full"] }
prost = "0.12"
prost-types = "0.12"
serde = { version = "1", features = ["derive"] }
serde-reflection = "0.3"
anyhow = "1"

[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = ["v4", "serde"]

[build-dependencies]
tonic-build = "0.11"
