[package]
name = "lenga_field_inspect_derive"
version = "1.0.0"
authors = ["Gerónimo Bejamín Palavecino <gbpalavecino01@gmail.com>", "Patricio Tourne Passarino <contact@patricios.space>"]
edition = "2024"
description = "Proc-macro derives for generating LanguageObject attributes objects for the Lenga package"
readme = "README.md"
repository = "https://github.com/lengalabs/lenga"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
uuid = { version = "1.17.0", features = ["v4"] }
